--- a/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
@@ -14,6 +14,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\ColorPicker.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\ColorPicker.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-JustGage" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
