--- a/Demos/Containers/Wisej.DemoBrowser.TableLayoutPanel/Wisej.DemoBrowser.TableLayoutPanel.csproj
+++ b/Demos/Containers/Wisej.DemoBrowser.TableLayoutPanel/Wisej.DemoBrowser.TableLayoutPanel.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-ChartJS3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-jQueryKnob" Version="3.*-*" />
+		<PackageReference Include="Wisej-3-JustGage" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
