--- a/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
@@ -14,6 +14,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Icons\excel.svg" />
+	  <None Remove="Icons\powerpoint.svg" />
+	  <None Remove="Icons\word.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Icons\excel.svg" />
+	  <EmbeddedResource Include="Icons\powerpoint.svg" />
+	  <EmbeddedResource Include="Icons\word.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-OfficeViewer" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
