--- a/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
@@ -23,9 +23,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Files\excel_sample.xls" />
-	  <EmbeddedResource Include="Files\powerpoint_sample.ppt" />
-	  <EmbeddedResource Include="Files\word_sample.doc" />
+	  <EmbeddedResource Include="Files\excel_sample.xls">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="Files\powerpoint_sample.ppt">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="Files\word_sample.doc">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </EmbeddedResource>
 	  <EmbeddedResource Include="Icons\excel.svg" />
 	  <EmbeddedResource Include="Icons\powerpoint.svg" />
 	  <EmbeddedResource Include="Icons\word.svg" />
