--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
@@ -59,15 +59,13 @@
 			<Version>1.0.0</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageReference Include="Wisej-3" Version="3.*-*" />
+		<PackageReference Include="Wisej-3-Kendo" Version="3.*-*" />
+		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.*-*" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Reference Include="Wisej.Framework">
-	    <HintPath>..\..\..\..\..\..\Wisej\Development\3.0\bin\net48\Wisej.Framework.dll</HintPath>
-	  </Reference>
-	  <Reference Include="Wisej.Web.Ext.Kendo">
-	    <HintPath>..\..\..\..\..\..\Wisej\Extensions\Premium\3.0\Wisej.Web.Ext.Kendo\bin\Release\net48\Wisej.Web.Ext.Kendo.dll</HintPath>
-	  </Reference>
+
 	</ItemGroup>
 
 </Project>
