--- a/Demos/Extenders/Wisej.DemoBrowser.Animation/Wisej.DemoBrowser.Animation.csproj
+++ b/Demos/Extenders/Wisej.DemoBrowser.Animation/Wisej.DemoBrowser.Animation.csproj
@@ -14,7 +14,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\wisej.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\wisej.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
+		<PackageReference Include="Wisej-3-NavigationBar" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
